--- a/frontend/all_years_dashboard.html
+++ b/frontend/all_years_dashboard.html
@@ -39,6 +39,7 @@
     <script src="js/tabulator-tailwind.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script>
+    // Format totals with currency and colour
     function totalFormatter(cell){
         const value = cell.getValue();
         const el = cell.getElement();
@@ -47,6 +48,7 @@
         return '£' + parseFloat(value).toFixed(2);
     }
 
+    // Render a table with yearly totals across multiple years
     function buildTable(id, data, years){
         const el = document.getElementById(id);
         el.innerHTML = '';
@@ -74,6 +76,7 @@
         });
     }
 
+    // Draw a column chart summarising totals
     function buildChart(id, title, data){
         Highcharts.chart(id, {
             chart: { type: 'column' },
@@ -85,10 +88,12 @@
         });
     }
 
+    // Build nested donut charts for categories and tags across all years
     function buildDonutCharts(incomeId, outgoingsId, categories, tags){
 
         const colors = Highcharts.getOptions().colors;
 
+        // Assemble chart data for either income or outgoing values
         function createData(isIncome){
             const categoryData = [];
             const tagData = [];
@@ -111,6 +116,7 @@
             return { categoryData, tagData };
         }
 
+        // Render a donut chart into a container
         function render(id, title, data){
             Highcharts.chart(id, {
                 chart: { type: 'pie' },
