--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -37,11 +37,13 @@
 <script src="js/tabulator-tailwind.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script>
+// Format a number as currency with a pound symbol
 function formatCurrency(value){return '£'+parseFloat(value).toFixed(2);}
 let budgetTable;
 const monthInput=document.getElementById('month');
 monthInput.value=new Date().toISOString().slice(0,7);
 
+// Populate the category select with options from the server
 async function loadCategories(){
     const res=await fetch('../php_backend/public/categories.php');
     const cats=await res.json();
@@ -53,6 +55,7 @@ async function loadCategories(){
     });
 }
 
+// Fetch and display budgets for the selected month
 async function loadBudgets(){
     const [year,month]=monthInput.value.split('-');
     const res=await fetch(`../php_backend/public/budgets.php?month=${parseInt(month)}&year=${parseInt(year)}`);
