--- a/frontend/group_dashboard.html
+++ b/frontend/group_dashboard.html
@@ -37,6 +37,7 @@
     <script src="js/tabulator-tailwind.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script>
+    // Format totals with currency and highlight positive/negative values
     function totalFormatter(cell){
         const value = cell.getValue();
         const el = cell.getElement();
@@ -45,6 +46,7 @@
         return '£' + parseFloat(value).toFixed(2);
     }
 
+    // Render a table of monthly totals for each group
     function buildMonthTable(data){
         const el = document.getElementById('month-table');
         el.innerHTML = '';
@@ -65,6 +67,7 @@
         tailwindTabulator(el, { data, layout: 'fitColumns', columns });
     }
 
+    // Render a table of yearly totals for each group
     function buildYearTable(data, years){
         const el = document.getElementById('year-table');
         el.innerHTML = '';
@@ -85,6 +88,7 @@
         tailwindTabulator(el, { data, layout: 'fitColumns', columns });
     }
 
+    // Create a column chart for the supplied dataset
     function buildChart(id, title, data){
         Highcharts.chart(id, {
             chart: { type: 'column' },
@@ -96,6 +100,7 @@
         });
     }
 
+    // Fetch dashboard data for the selected year and populate tables and charts
     async function load(){
         const year = document.getElementById('year-select').value;
         const res = await fetch('../php_backend/public/group_dashboard.php?year=' + year);
