--- a/frontend/processes.html
+++ b/frontend/processes.html
@@ -24,6 +24,7 @@
     </div>
     <script src="js/menu.js"></script>
     <script>
+    // Trigger a backend process with a progress indicator
     async function run(action){
         const progressContainer = document.getElementById('progress-container');
         const progressBar = document.getElementById('progress-bar');
