--- a/frontend/backup.html
+++ b/frontend/backup.html
@@ -15,12 +15,19 @@
             <h1 class="text-2xl font-semibold mb-4">Backup &amp; Restore</h1>
             <section class="bg-white p-6 rounded shadow space-y-4">
                 <h2 class="text-xl font-semibold">Download Backup</h2>
-                <p>Download all transactions, categories, tags, and groups as a JSON file.</p>
+                <p>Select which data to include in the backup JSON file.</p>
+                <div class="space-y-2">
+                    <label class="block"><input type="checkbox" name="parts" value="transactions" class="mr-2">Transactions</label>
+                    <label class="block"><input type="checkbox" name="parts" value="categories" class="mr-2">Categories</label>
+                    <label class="block"><input type="checkbox" name="parts" value="tags" class="mr-2">Tags</label>
+                    <label class="block"><input type="checkbox" name="parts" value="groups" class="mr-2">Groups</label>
+                    <label class="block"><input type="checkbox" name="parts" value="budgets" class="mr-2">Budgets</label>
+                </div>
                 <button id="download-backup" class="bg-blue-600 text-white px-4 py-2 rounded"><i class="fa-solid fa-download mr-2"></i>Download</button>
             </section>
             <section class="bg-white p-6 rounded shadow space-y-4">
                 <h2 class="text-xl font-semibold">Restore Backup</h2>
-                <p>Select a backup JSON file to restore transactions, categories, tags, and groups.</p>
+                <p>Select a backup JSON file to restore any included transactions, categories, tags, groups, or budgets.</p>
                 <form id="restore-form" action="../php_backend/public/restore.php" method="POST" enctype="multipart/form-data" class="space-y-4">
                     <input type="file" id="backup-file" name="backup_file" accept="application/json" required data-help="Choose a previously downloaded backup JSON file">
                     <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded"><i class="fa-solid fa-upload mr-2"></i>Restore</button>
