--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,14 +27,20 @@
                             <li>Yearly dashboard summarises activity for a selected year.</li>
                             <li>All years dashboard compares trends across years.</li>
                             <li>Monthly dashboard shows month-by-month results.</li>
+                            <li>Group dashboard analyses spending by category group.</li>
+                            <li>Account dashboard tracks balances per account.</li>
                         </ul>
                     </li>
+                    <li>Visualise trends with interactive graphs.</li>
+                    <li>Track spending against budgets.</li>
                     <li>View monthly statements to review individual transactions.</li>
                     <li>Generate detailed transaction reports.</li>
                     <li>Search transactions to find specific payments or receipts.</li>
+                    <li>Track transfers between accounts separately.</li>
                     <li>Organise data by managing tags, categories and groups.</li>
                     <li>Identify untagged items via the Missing Tags page.</li>
                     <li>Run background processes and review application logs.</li>
+                    <li>Back up and restore your data.</li>
                     <li>Manage user accounts and log out when you're done.</li>
                 </ul>
             </section>
