Add recurring spend detection page and API

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -18,6 +18,7 @@
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="monthly_dashboard.html"><i class="fa-solid fa-chart-column mr-2"></i> Monthly Dashboard</a></li>
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="group_dashboard.html"><i class="fa-solid fa-users mr-2"></i> Group Dashboard</a></li>
       <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="account_dashboard.html"><i class="fa-solid fa-wallet mr-2"></i> Account Dashboard</a></li>
+      <li><a class="flex items-center text-blue-600 hover:text-blue-800" href="recurring_spend.html"><i class="fa-solid fa-repeat mr-2"></i> Recurring Spend</a></li>
     </ul>
   </div>
 
